Day18/State_lock_with_DynamoDB/network.tf
#vpc
resource "aws_vpc" "vpc_s3" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
}
#subnet
resource "aws_subnet" "subnet_s3" {
  vpc_id     = aws_vpc.vpc_s3.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  
  tags = {
    Name = "subnet_s3"
  }
}
#ig
resource "aws_internet_gateway" "ig_s3" {
  vpc_id = aws_vpc.vpc_s3.id

  tags = {
    Name = "ig_s3"
  }
}
#route table
resource "aws_route_table" "rt_s3" {
  vpc_id = aws_vpc.vpc_s3.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig_s3.id
  }

  tags = {
    Name = "rt_s3"
  }
}
#route table association
resource "aws_route_table_association" "rta_s3" {
  subnet_id      = aws_subnet.subnet_s3.id
  route_table_id = aws_route_table.rt_s3.id
}
#security group
resource "aws_security_group" "sg_s3" {
  name        = "sg_s3"
  description = "Allow ALL inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.vpc_s3.id

  tags = {
    Name = "sg_s3"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.sg_s3.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.sg_s3.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.sg_s3.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
